# yolov3_ros_coppeliasim

./: README.md  teste.csv
CoppeliaSim/: AUTO_SAVED_INSTANCE_1.ttt  b0_resolver  bubbleRobClient  bubbleRobServer  bubbleRobZmqServer  coppeliaSim  coppeliaSim.sh  coppeliaSimEduV403XX-LicenseAgreement.txt  credits.txt  libLoadErrorCheck.sh  libOpenMeshCore.so.7.1  libOpenMeshTools.so.7.1  libQt53DCore.so.5.12.5  libQt53DExtras.so.5  libQt53DExtras.so.5.12.5  libQt53DInput.so.5  libQt53DInput.so.5.12.5  libQt53DLogic.so.5  libQt53DLogic.so.5.12.5  libQt53DQuick.so.5  libQt53DQuick.so.5.12.5  libQt5Concurrent.so.5.12  libQt5Concurrent.so.5.12.5  libQt5Core.so.5  libQt5DBus.so.5.12.5  libQt5Gamepad.so.5.12.5  libQt5Gui.so.5  libQt5Network.so.5.12.5  libQt5OpenGL.so.5.12  libQt5OpenGL.so.5.12.5  libQt5PrintSupport.so.5.12.5  libQt5Quick.so.5.12  libQt5QuickControls2.so.5.12  libQt5QuickControls2.so.5.12.5  libQt5QuickParticles.so.5.12.5  libQt5QuickShapes.so.5.12  libQt5QuickShapes.so.5.12.5  libQt5QuickTemplates2.so.5  libQt5QuickTemplates2.so.5.12.5  libQt5QuickWidgets.so.5.12  (+83 more)
CoppeliaSim/bwf/: simBWF.lua
CoppeliaSim/cadFiles/: pegasus.urdf  pegasus_garra_D_responsable__80__.dae  pegasus_garra_D_visual__81__.dae  pegasus_garra_E_responsable__83__.dae  pegasus_garra_E_visual__84__.dae  pegasus_link_2_respondable__68__.dae  pegasus_link_2_visual__69__.dae  pegasus_link_5_respondable__77__.dae  pegasus_link_5_visual__78__.dae
CoppeliaSim/helpFiles/: gSearch.html  gfSearch.html  index.html  license.txt  style.css  wb_search.txt  wb_tree.html
CoppeliaSim/lua/: animator_customization.lua  b0RemoteApiServer.lua  base16.lua  base64.lua  checkargs.lua  configUi-QML.lua  configUi.lua  conveyorSystem_customization-2.lua  conveyorSystem_customization.lua  conveyor_customization-2.lua  conveyor_customization.lua  (+54 more)
CoppeliaSim/programming/libPlugin/simStubsGen/tests/: CMakeLists.txt  callbacks.xml  simStubsGenTests.cpp  simStubsGenTests.lua  simStubsGenTestsRunner.lua
CoppeliaSim/programming/ros_packages/ros_bubble_rob/: CMakeLists.txt  license.txt  mainpage.dox  package.xml
CoppeliaSim/programming/ros_packages/ros_bubble_rob/src/: rosBubbleRob.cpp
scenes/: kinect-yolo.ttt  realsense-yolo.ttt
scripts/: coppeliasim.py  test.py  teste.csv  yolov3_ros_coppeliasim.py
(+1265 files in other folders)
